--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
     <head>
+	<link rel="stylesheet" href="theme.css">
     </head>
     <body>
-        <svg height="100" width="100">
-          <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
-          Sorry, your browser does not support inline SVG.
-        </svg>
+        <div class="changingDiv">
+            <svg class="fieldSvg">
+                <ellipse cx="10%" cy="130%" rx="1000" ry="500" class="fore-field field" />
+                <ellipse cx="80%" cy="140%" rx="1000" ry="500" class="back-field field" />
+                Sorry, your browser does not support inline SVG.
+            </svg>
+        </div>
+        <div>
+            <p>
+                HEY
+            </p>
+        </div>
     </body>
 </html>
