--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 
 <h1>Hello, world!</h1>
 
+<div id="maincontent" class="container">
+</div>
 
  </body>
  <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -219,7 +221,7 @@
  var path = d3.geoPath()
      .projection(projection);
 
- var svg = d3.select("body").append("svg")
+ var svg = d3.select("#maincontent").append("svg")
      .attr("width", width)
      .attr("height", height);
 
