--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
      .attr("width", width)
      .attr("height", height);
 
-     d3.queue()
-         .defer(d3.json, "./mapdata/us2016.topo.json")
-         .defer(d3.json, "./mapdata/congress.topo.json")
-         .await(ready);
+    //  d3.queue()
+    //      .defer(d3.json, "./mapdata/us2016.topo.json")
+    //      .defer(d3.json, "./mapdata/congress.topo.json")
+    //      .await(ready);
 
      function ready(error, us, congress) {
        if (error) throw error;
