--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
  var width = 960,
      height = 600;
 
- var projection = d3.geo.albersUsa()
+ var projection = d3.geoAlbersUsa()
      .scale(1280)
      .translate([width / 2, height / 2]);
 
- var path = d3.geo.path()
+ var path = d3.geoPath()
      .projection(projection);
 
  var color = d3.scale.category10().domain(d3.range(9)),
