--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
  var path = d3.geoPath()
      .projection(projection);
 
- var color = d3.scaleOrdinal(d3.schemeCategory10);.domain(d3.range(9)),
+ var color = d3.scaleOrdinal(d3.schemeCategory10).domain(d3.range(9)),
      selectedColor = 0,
      dragColor;
 
