--- a/index.html
+++ b/index.html
@@ -290,8 +290,15 @@
        .on("mouseover", function() { this.style.stroke = "black"; })
        .on("mouseout", function() { this.style.stroke = "none"; })
        .call(d3.drag()
-         .on("dragstart", dragstart)
-         .on("drag", drag));
+         .on("dragstart", function() {
+           var feature = d3.event.sourceEvent.target.__data__;
+           if (assign(feature, dragColor = feature.color === selectedColor ? null : selectedColor)) redraw();
+         }
+)
+         .on("drag", function () {
+           var feature = d3.event.sourceEvent.target.__data__;
+           if (feature && assign(feature, dragColor)) redraw();
+         }));
 
    top.location.hash.split("").slice(1, features.length).forEach(function(c, i) {
      if ((c = +c) >= 0 && c < 10) assign(features[i], c ? c - 1 : null);
