--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
      .selectAll("path")
        .data(components)
      .enter().append("path")
-       .style("fill", function(d, i) { return color(i); })
+       .style("fill", "#888")
        .style("stroke", function(d, i) { return d3.lab(color(i)).darker(); });
 
        function dragstart() {
@@ -287,7 +287,7 @@
        .data(features)
      .enter().append("path")
        .attr("d", function(d) { d.color = null; return path(d); })
-       .on("mouseover", function() { this.style.stroke = "none"; })
+       .on("mouseover", function() { this.style.stroke = "black"; })
        .on("mouseout", function() { this.style.stroke = "none"; })
        .call(d3.drag()
          .on("start", function() {
